<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/app_name"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="@dimen/textSize36" />-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_m_logo" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginRight="@dimen/margin_40"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/margin_5"
            app:cardElevation="@dimen/elevation_10"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_50"
                android:paddingLeft="@dimen/padding_10"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_50">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/uniform_margin"
                    android:layout_marginRight="@dimen/uniform_margin"
                    android:padding="@dimen/padding_10">

                    <LinearLayout
                        android:id="@+id/ll_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/tv_username"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_perm_identity_white" />

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="@dimen/margin_10"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/ll_username"
                        android:layout_marginTop="@dimen/margin_3"
                        android:background="@color/teal_2" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/uniform_margin"
                    android:layout_marginRight="@dimen/uniform_margin"
                    android:padding="@dimen/padding_10">

                    <LinearLayout
                        android:id="@+id/ll_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/tv_password"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_lock_outline_white" />

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="@dimen/margin_10"
                            android:background="@null"
                            android:imeOptions="actionDone"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/ll_password"
                        android:layout_marginTop="@dimen/margin_3"
                        android:background="@color/teal_2" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_30"
                    android:layout_marginRight="@dimen/margin_30"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/bg_btn_login"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_30"
                        android:text="@string/forgot_password"
                        android:textColor="@color/teal_2" />

                    <TextView
                        android:id="@+id/tv_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/margin_30"
                        android:text="@string/register"
                        android:textColor="@color/teal_2" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>